creation of structure html form - Register users

--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,48 @@ textarea {
         margin: 0;
         text-align: center;
     }
+
+
+    /*** INTERNAS ***/
+    /*** Registro ***/
+
+    form.registro h3 {
+        text-align: center;
+        text-transform:  uppercase;
+        margin: 20px 0 0 0;
+    }
+
+    form.registro label {
+        margin-bottom: 5px;
+        font-weight: 
+    }
+
+    div.caja {
+        background-color: white;
+        border: 1px solid #e1e1e1;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    div.campo {
+        padding: 20px;
+        text-align: center;
+    }
+
+    @media only screen and (min-width:768px){
+        div.campo {
+           margin: 0;
+           margin-left: 40%;
+           float: center;
+           width: 20%;
+           text-align: center;
+        }
+
+        div.campo label {
+            margin-bottom: 500px;
+        }
+    }
+
  /* ==========================================================================
    Helper classes
    ========================================================================== */
