ajustes boton arriba (pendiente de ajustar contenedor de video)

--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,12 @@
 .ir-arriba{
-  display: none;
+  display: block;
   padding: 20px;
   background: orange;
   cursor: pointer;
   position: fixed;
   bottom: 10px;
   right: 10px;
+}
+video{
+  height: auto;
 }
