--- a/css/main.css
+++ b/css/main.css
@@ -591,7 +591,7 @@ textarea {
 
     form.registro label {
         margin-bottom: 5px;
-        font-weight: 
+        font-weight: 10px;
     }
 
     div.caja {
